--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node .",
+    "start": "nodemon .",
     "test": "mocha plugins/**/test/**/*.tests.js"
   },
   "repository": {
@@ -25,9 +25,12 @@
   "homepage": "https://github.com/LeisureLink/modulus-slack-notifier#readme",
   "devDependencies": {
     "code": "^2.0.1",
+    "eslint": "^1.10.3",
+    "eslint-watch": "^2.1.4",
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "@leisurelink/authentic-client": "^1.1.0",
     "blipp": "^2.3.0",
     "bluebird": "^3.0.6",
     "boom": "^3.0.0",
@@ -45,6 +48,7 @@
     "joi": "^7.0.1",
     "lodash": "^3.10.1",
     "rejoice": "^2.2.1",
+    "request": "^2.67.0",
     "tv": "^5.0.1",
     "vision": "^4.0.1"
   }
