--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "start": "node .",
-    "test": "mocha plugins/**/test/**/*.tests.js"
+    "test": "mocha plugins/**/test/**/*.tests.js",
+    "lint": "esw --quiet",
+    "ci": "npm run lint && npm test"
   },
   "repository": {
     "type": "git",
@@ -24,33 +26,33 @@
   },
   "homepage": "https://github.com/LeisureLink/modulus-slack-notifier#readme",
   "devDependencies": {
-    "code": "^2.0.1",
+    "code": "^2.1.0",
     "eslint": "^1.10.3",
-    "eslint-watch": "^2.1.4",
-    "mocha": "^2.3.4",
-    "nock": "^3.5.0",
-    "sinon": "^1.17.2"
+    "eslint-watch": "^2.1.7",
+    "mocha": "^2.4.5",
+    "nock": "^7.0.2",
+    "sinon": "^1.17.3"
   },
   "dependencies": {
     "@leisurelink/authentic-client": "^1.1.0",
     "blipp": "^2.3.0",
-    "bluebird": "^3.0.6",
-    "boom": "^3.0.0",
+    "bluebird": "^3.1.5",
+    "boom": "^3.1.2",
     "enjoi": "^1.0.1",
-    "glue": "^2.4.0",
+    "glue": "^3.1.0",
     "good": "^6.4.0",
-    "good-console": "^5.2.0",
-    "hapi": "^11.1.2",
+    "good-console": "^5.3.0",
+    "hapi": "^12.1.0",
     "hapi-async-handler": "^1.0.3",
-    "hapi-plugin-router": "^1.1.0",
+    "hapi-plugin-router": "^1.1.1",
     "hapi-router": "^3.4.0",
-    "hapi-swaggered": "^2.4.1",
-    "hapi-swaggered-ui": "^2.1.1",
+    "hapi-swaggered": "^2.6.0",
+    "hapi-swaggered-ui": "^2.3.1",
     "inert": "^3.2.0",
-    "joi": "^7.0.1",
-    "lodash": "^3.10.1",
-    "rejoice": "^2.2.1",
-    "request": "^2.67.0",
+    "joi": "^7.2.2",
+    "lodash": "^4.0.1",
+    "rejoice": "^3.0.0",
+    "request": "^2.69.0",
     "tv": "^5.0.1",
     "vision": "^4.0.1"
   }
