Fixed some things with the request sending

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rejoice": "^3.0.0",
     "request": "^2.69.0",
     "tv": "^5.0.1",
-    "vision": "^4.0.1"
+    "vision": "^4.0.1",
+    "wreck": "^7.0.0"
   }
 }
