Fixed pubkey generator

--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,5 @@ deployment:
       - echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/$CIRCLE_PROJECT_REPONAME/.npmrc
       - modulus deploy -p modulus-notifier-staging
       - echo "$PRIVATE_KEY" > ~/$CIRCLE_PROJECT_REPONAME/modulus-notifier.pem
-      - openssl rsa -inform PEM -in ~/$CIRCLE_PROJECT_REPONAME/modulus-notifier.pem -pubout -out ~/$CIRCLE_PROJECT_REPONAME/modulus-notifier.pub
+      - openssl rsa -pubout -in ~/$CIRCLE_PROJECT_REPONAME/modulus-notifier.pem -out ~/$CIRCLE_PROJECT_REPONAME/modulus-notifier.pub
       - modulus deploy -p modulus-notifier
